--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -12,6 +12,7 @@
                 <div class="item-name">
                   <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
                     <h4>{{item.name}}</h4>
+                    <p>{{system.reload}}</p>
                 </div>
                 <div class="item-controls">
                     <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
