Get sheet rendering chapter and specialization

--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -1,11 +1,26 @@
 <form class="actor-sheet {{cssClass}}" autocomplete="off">
     <header class="sheet-header">
         <img src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="64" width="64"/>
+        <div>
         <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'Name' }}"/></h1>
+        </div>
     </header>
+    
+    <section class="background">
+        {{#each_when actor.items "type" "chapter"}}
+          <h2 class="chapter-pill item" data-item-id="{{item.id}}">Chapter: {{item.name}} <i class="fas fa-times item-delete"></i></h2>
+        {{else}}
+         <h2 class="drag-note">{{localize "Drag Here"}}</h2>
+        {{/each_when}}
+        {{#each_when actor.items "type" "specialization"}}
+          <h2 class="specialization-pill item" data-item-id="{{item.id}}">Specialization: {{item.name}} <i class="fas fa-times item-delete"></i></h2>
+        {{else}}
+         <h2 class="drag-note">{{localize "Drag Here"}}</h2>
+        {{/each_when}}
+    </section>
 
     <section class="items">
-        <h3 class="noborder">Pwned Items</h3>
+        <h2 class="noborder">Items</h2>
         <ol class="actor-items">
         {{#each actor.items as |item id|}}
             <li class="actor-item" data-item-id="{{id}}">
