--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -7,23 +7,36 @@
     </header>
     
     <section class="background">
-        {{#each_when actor.items "type" "chapter"}}
-          <h2 class="chapter-pill item" data-item-id="{{item.id}}">Chapter: {{item.name}} <i class="fas fa-times item-delete"></i></h2>
+        {{#if chapter}}
+          <h2 class="chapter-pill item" data-item-id="{{chapter.id}}">Chapter: {{chapter.name}} <i class="fas fa-times item-delete"></i></h2>
         {{else}}
-         <h2 class="drag-note">{{localize "Drag Here"}}</h2>
-        {{/each_when}}
-        {{#each_when actor.items "type" "specialization"}}
-          <h2 class="specialization-pill item" data-item-id="{{item.id}}">Specialization: {{item.name}} <i class="fas fa-times item-delete"></i></h2>
+        <h2 class="drag-note">{{ localize "Drag Here"}}</h2>
+        {{/if}}
+        {{#if specialization}}
+          <h2 class="specialization-pill item" data-item-id="{{specialization.id}}">Specialization: {{specialization.name}} <i class="fas fa-times item-delete"></i></h2>
         {{else}}
-         <h2 class="drag-note">{{localize "Drag Here"}}</h2>
-        {{/each_when}}
+           <h2 class="drag-note">{{localize "Drag Here"}}</h2>
+        {{/if}}
     </section>
 
     <section class="items">
-        <h2 class="noborder">Items</h2>
+        <h2 class="noborder">Wargear</h2>
         <ol class="actor-items">
-        {{#each actor.items as |item id|}}
-            <li class="actor-item" data-item-id="{{id}}">
+        {{#each actor.itemTypes.weapon as |item idx|}}
+        <li class="actor-item item" data-item-id="{{item.id}}">
+                <div class="item-name">
+                  <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+                    <h4>{{item.name}}</h4>
+                    <p>{{system.reload}}</p>
+                </div>
+                <div class="item-controls">
+                    <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                    <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                </div>
+            </li>
+        {{/each}}
+        {{#each actor.itemTypes.wargear as |item idx|}}
+        <li class="actor-item item" data-item-id="{{item.id}}">
                 <div class="item-name">
                   <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
                     <h4>{{item.name}}</h4>
