--- a/templates/item-sheet.html
+++ b/templates/item-sheet.html
@@ -1,7 +1,14 @@
 <form class="{{cssClass}}" autocomplete="off">
+    <p>{{capitalize item.type}}</p>
     <header class="sheet-header">
         <img src="{{item.img}}" data-edit="img" title="{{item.name}}" height="64" width="64"/>
         <h1><input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'Name' }}"/></h1>
     </header>
+    {{#ifEq item "type" "chapter"}}
+    <p>Chapter</p>
+    {{/ifEq}}
+    {{#ifEq item "type" "specialization"}}
+    <p>Specialization</p>
+    {{/ifEq}}
 </form>
 
